Almost there, added function to reapply check_off class to elements on page reload

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <input type="submit" name="submit" value="Add Task">
                 </form>            
             </div>
-            
+            <!-- Error Div -->
+            <div class="error"></div>
             <!--COLUMN CONTAINER -->
             <div id="column-container">
                 <!--LEFT COLUMN-->
